# Mias

./: .gitignore  .gitmodules  CONTRIBUTING.md  QUICK_START.md  README.md  build.gradle.kts  gradlew  gradlew.bat  index.html  settings.gradle.kts
.continue/mcpServers/: new-mcp-server.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_improvement.md
.github/prompts/: add-dependency.prompt.md  debug-workflow.prompt.md  feature-workflow.prompt.md
app/: build.gradle.kts  proguard-rules.pro
core/agent/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/evolution/: build.gradle.kts
core/inference/: build.gradle.kts
core/inference/src/main/cpp/: CMakeLists.txt  litert_jni_bridge.cpp  mias_jni_bridge.cpp
core/language/: build.gradle.kts
core/model-hub/: build.gradle.kts
core/network/: build.gradle.kts
core/resilience/: build.gradle.kts
core/security/: build.gradle.kts
core/soul/: build.gradle.kts
core/speech/: build.gradle.kts
core/thermal/: build.gradle.kts
core/ui/: build.gradle.kts
desktop/: Dockerfile  requirements.txt  server.py
docs/: BUILD_TROUBLESHOOTING.md  DEPLOYMENT_STATUS.md  DOC#001.docx  IMPLEMENTATION_BLUEPRINT.py  LANGUAGE_ARCHITECTURE.md  PRD.docx  PROGRESS.md  SETUP.md  V4_ARCHITECTURE.md
gradle/: libs.versions.toml
scripts/: audit_deps.sh  bootstrap-gradle.bat  bootstrap-gradle.sh  init.sh  mcp_bridge.py
temp/: MIAS_AGENT_PROMPT.md  MIAS_ANALYSIS.md  MIAS_IMPROVEMENTS.md
tests/: README.md
tests/contract/: test_mcp_bridge_contract.py
tests/integration/: test_zero_cloud_policy.py
tests/scripts/: run_all_tests.sh
(+157 files in other folders)
